@@ -19,8 +19,10 @@ namespace CrissCross
     namespace Network
     {
         // Undocumented for a reason. Don't call them.
+		//! @cond
         CrissCross::Errors __initialise_network();
         CrissCross::Errors __cleanup_network();
+		//! @encond
     }
 }
 
