@@ -40,7 +40,7 @@
 #   define CC_LIB_BRANCH_AT_VERSION   "0.7.0"
 #   define CC_LIB_VERSION_MAJOR       0
 #   define CC_LIB_VERSION_MINOR       6
-#   define CC_LIB_VERSION_REVISION    1
+#   define CC_LIB_VERSION_REVISION    5
 const int CC_LIB_VERSION_BUILD      = BUILD_NUMBER;
 #   undef BUILD_NUMBER
 #   undef __included_build_number_h
